--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
@@ -1,21 +1,33 @@
+source.file=docker:springcloudstream/file-source-rabbit:@file-source-docker.tag@
+source.geode=docker:springcloudstream/geode-source-rabbit:@geode-source-docker.tag@
+source.http=docker:springcloudstream/http-source-rabbit:@http-source-docker.tag@
+source.jdbc=docker:springcloudstream/jdbc-source-rabbit:@jdbc-source-docker.tag@
+source.load-generator=docker:springcloudstream/load-generator-source-rabbit:@load-generator-source-docker.tag@
+source.mongodb=docker:springcloudstream/mongodb-source-rabbit:@mongodb-source-docker.tag@
+source.mqtt=docker:springcloudstream/mqtt-source-rabbit:@mqtt-source-docker.tag@
+source.rabbit=docker:springcloudstream/rabbit-source-rabbit:@rabbit-source-docker.tag@
+source.tcp=docker:springcloudstream/tcp-source-rabbit:@tcp-source-docker.tag@
+source.time=docker:springcloudstream/time-source-rabbit:@time-source-docker.tag@
 sink.cassandra=docker:springcloudstream/cassandra-sink-rabbit:@cassandra-sink-docker.tag@
 sink.counter=docker:springcloudstream/counter-sink-rabbit:@counter-sink-docker.tag@
 sink.file=docker:springcloudstream/file-sink-rabbit:@file-sink-docker.tag@
 sink.ftp=docker:springcloudstream/ftp-sink-rabbit:@ftp-sink-docker.tag@
+sink.geode=docker:springcloudstream/geode-sink-rabbit:@geode-sink-docker.tag@
 sink.jdbc=docker:springcloudstream/jdbc-sink-rabbit:@jdbc-sink-docker.tag@
 sink.log=docker:springcloudstream/log-sink-rabbit:@log-sink-docker.tag@
 sink.mongodb=docker:springcloudstream/mongodb-sink-rabbit:@mongodb-sink-docker.tag@
+sink.mqtt=docker:springcloudstream/mqtt-sink-rabbit:@mqtt-sink-docker.tag@
 sink.rabbit=docker:springcloudstream/rabbit-sink-rabbit:@rabbit-sink-docker.tag@
 sink.redis=docker:springcloudstream/redis-sink-rabbit:@redis-sink-docker.tag@
+sink.router=docker:springcloudstream/router-sink-rabbit:@router-sink-docker.tag@
 sink.sftp=docker:springcloudstream/sftp-sink-rabbit:@sftp-sink-docker.tag@
-source.file=docker:springcloudstream/file-source-rabbit:@file-source-docker.tag@
-source.http=docker:springcloudstream/http-source-rabbit:@http-source-docker.tag@
-source.jdbc=docker:springcloudstream/jdbc-source-rabbit:@jdbc-source-docker.tag@
-source.mongodb=docker:springcloudstream/mongodb-source-rabbit:@mongodb-source-docker.tag@
-source.time=docker:springcloudstream/time-source-rabbit:@time-source-docker.tag@
+sink.tcp=docker:springcloudstream/tcp-sink-rabbit:@tcp-sink-docker.tag@
+sink.throughput=docker:springcloudstream/throughput-sink-rabbit:@throughput-sink-docker.tag@
 processor.bridge=docker:springcloudstream/bridge-processor-rabbit:@bridge-processor-docker.tag@
 processor.filter=docker:springcloudstream/filter-processor-rabbit:@filter-processor-docker.tag@
-processor.groovy-transform=docker:springcloudstream/groovy-transform-processor-rabbit:@groovy-transform-processor-docker.tag@
+processor.groovy=docker:springcloudstream/groovy-processor-rabbit:@groovy-processor-docker.tag@
 processor.header-enricher=docker:springcloudstream/header-enricher-processor-rabbit:@header-enricher-processor-docker.tag@
+processor.http-request=docker:springcloudstream/http-request-processor-rabbit:@http-request-processor-docker.tag@
+processor.script=docker:springcloudstream/script-processor-rabbit:@script-processor-docker.tag@
 processor.splitter=docker:springcloudstream/splitter-processor-rabbit:@splitter-processor-docker.tag@
 processor.transform=docker:springcloudstream/transform-processor-rabbit:@transform-processor-docker.tag@
