--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
@@ -1,3 +1,23 @@
+source.file=maven://org.springframework.cloud.stream.app:file-source-rabbit:@file-source.version@
+source.file.metadata=maven://org.springframework.cloud.stream.app:file-source-rabbit:jar:metadata:@file-source.version@
+source.geode=maven://org.springframework.cloud.stream.app:geode-source-rabbit:@geode-source.version@
+source.geode.metadata=maven://org.springframework.cloud.stream.app:geode-source-rabbit:jar:metadata:@geode-source.version@
+source.http=maven://org.springframework.cloud.stream.app:http-source-rabbit:@http-source.version@
+source.http.metadata=maven://org.springframework.cloud.stream.app:http-source-rabbit:jar:metadata:@http-source.version@
+source.jdbc=maven://org.springframework.cloud.stream.app:jdbc-source-rabbit:@jdbc-source.version@
+source.jdbc.metadata=maven://org.springframework.cloud.stream.app:jdbc-source-rabbit:jar:metadata:@jdbc-source.version@
+source.load-generator=maven://org.springframework.cloud.stream.app:load-generator-source-rabbit:@load-generator-source.version@
+source.load-generator.metadata=maven://org.springframework.cloud.stream.app:load-generator-source-rabbit:jar:metadata:@load-generator-source.version@
+source.mongodb=maven://org.springframework.cloud.stream.app:mongodb-source-rabbit:@mongodb-source.version@
+source.mongodb.metadata=maven://org.springframework.cloud.stream.app:mongodb-source-rabbit:jar:metadata:@mongodb-source.version@
+source.mqtt=maven://org.springframework.cloud.stream.app:mqtt-source-rabbit:@mqtt-source.version@
+source.mqtt.metadata=maven://org.springframework.cloud.stream.app:mqtt-source-rabbit:jar:metadata:@mqtt-source.version@
+source.rabbit=maven://org.springframework.cloud.stream.app:rabbit-source-rabbit:@rabbit-source.version@
+source.rabbit.metadata=maven://org.springframework.cloud.stream.app:rabbit-source-rabbit:jar:metadata:@rabbit-source.version@
+source.tcp=maven://org.springframework.cloud.stream.app:tcp-source-rabbit:@tcp-source.version@
+source.tcp.metadata=maven://org.springframework.cloud.stream.app:tcp-source-rabbit:jar:metadata:@tcp-source.version@
+source.time=maven://org.springframework.cloud.stream.app:time-source-rabbit:@time-source.version@
+source.time.metadata=maven://org.springframework.cloud.stream.app:time-source-rabbit:jar:metadata:@time-source.version@
 sink.cassandra=maven://org.springframework.cloud.stream.app:cassandra-sink-rabbit:@cassandra-sink.version@
 sink.cassandra.metadata=maven://org.springframework.cloud.stream.app:cassandra-sink-rabbit:jar:metadata:@cassandra-sink.version@
 sink.counter=maven://org.springframework.cloud.stream.app:counter-sink-rabbit:@counter-sink.version@
@@ -6,36 +26,40 @@ sink.file=maven://org.springframework.cloud.stream.app:file-sink-rabbit:@file-si
 sink.file.metadata=maven://org.springframework.cloud.stream.app:file-sink-rabbit:jar:metadata:@file-sink.version@
 sink.ftp=maven://org.springframework.cloud.stream.app:ftp-sink-rabbit:@ftp-sink.version@
 sink.ftp.metadata=maven://org.springframework.cloud.stream.app:ftp-sink-rabbit:jar:metadata:@ftp-sink.version@
+sink.geode=maven://org.springframework.cloud.stream.app:geode-sink-rabbit:@geode-sink.version@
+sink.geode.metadata=maven://org.springframework.cloud.stream.app:geode-sink-rabbit:jar:metadata:@geode-sink.version@
 sink.jdbc=maven://org.springframework.cloud.stream.app:jdbc-sink-rabbit:@jdbc-sink.version@
 sink.jdbc.metadata=maven://org.springframework.cloud.stream.app:jdbc-sink-rabbit:jar:metadata:@jdbc-sink.version@
 sink.log=maven://org.springframework.cloud.stream.app:log-sink-rabbit:@log-sink.version@
 sink.log.metadata=maven://org.springframework.cloud.stream.app:log-sink-rabbit:jar:metadata:@log-sink.version@
 sink.mongodb=maven://org.springframework.cloud.stream.app:mongodb-sink-rabbit:@mongodb-sink.version@
 sink.mongodb.metadata=maven://org.springframework.cloud.stream.app:mongodb-sink-rabbit:jar:metadata:@mongodb-sink.version@
+sink.mqtt=maven://org.springframework.cloud.stream.app:mqtt-sink-rabbit:@mqtt-sink.version@
+sink.mqtt.metadata=maven://org.springframework.cloud.stream.app:mqtt-sink-rabbit:jar:metadata:@mqtt-sink.version@
 sink.rabbit=maven://org.springframework.cloud.stream.app:rabbit-sink-rabbit:@rabbit-sink.version@
 sink.rabbit.metadata=maven://org.springframework.cloud.stream.app:rabbit-sink-rabbit:jar:metadata:@rabbit-sink.version@
 sink.redis=maven://org.springframework.cloud.stream.app:redis-sink-rabbit:@redis-sink.version@
 sink.redis.metadata=maven://org.springframework.cloud.stream.app:redis-sink-rabbit:jar:metadata:@redis-sink.version@
+sink.router=maven://org.springframework.cloud.stream.app:router-sink-rabbit:@router-sink.version@
+sink.router.metadata=maven://org.springframework.cloud.stream.app:router-sink-rabbit:jar:metadata:@router-sink.version@
 sink.sftp=maven://org.springframework.cloud.stream.app:sftp-sink-rabbit:@sftp-sink.version@
 sink.sftp.metadata=maven://org.springframework.cloud.stream.app:sftp-sink-rabbit:jar:metadata:@sftp-sink.version@
-source.file=maven://org.springframework.cloud.stream.app:file-source-rabbit:@file-source.version@
-source.file.metadata=maven://org.springframework.cloud.stream.app:file-source-rabbit:jar:metadata:@file-source.version@
-source.http=maven://org.springframework.cloud.stream.app:http-source-rabbit:@http-source.version@
-source.http.metadata=maven://org.springframework.cloud.stream.app:http-source-rabbit:jar:metadata:@http-source.version@
-source.jdbc=maven://org.springframework.cloud.stream.app:jdbc-source-rabbit:@jdbc-source.version@
-source.jdbc.metadata=maven://org.springframework.cloud.stream.app:jdbc-source-rabbit:jar:metadata:@jdbc-source.version@
-source.mongodb=maven://org.springframework.cloud.stream.app:mongodb-source-rabbit:@mongodb-source.version@
-source.mongodb.metadata=maven://org.springframework.cloud.stream.app:mongodb-source-rabbit:jar:metadata:@mongodb-source.version@
-source.time=maven://org.springframework.cloud.stream.app:time-source-rabbit:@time-source.version@
-source.time.metadata=maven://org.springframework.cloud.stream.app:time-source-rabbit:jar:metadata:@time-source.version@
+sink.tcp=maven://org.springframework.cloud.stream.app:tcp-sink-rabbit:@tcp-sink.version@
+sink.tcp.metadata=maven://org.springframework.cloud.stream.app:tcp-sink-rabbit:jar:metadata:@tcp-sink.version@
+sink.throughput=maven://org.springframework.cloud.stream.app:throughput-sink-rabbit:@throughput-sink.version@
+sink.throughput.metadata=maven://org.springframework.cloud.stream.app:throughput-sink-rabbit:jar:metadata:@throughput-sink.version@
 processor.bridge=maven://org.springframework.cloud.stream.app:bridge-processor-rabbit:@bridge-processor.version@
 processor.bridge.metadata=maven://org.springframework.cloud.stream.app:bridge-processor-rabbit:jar:metadata:@bridge-processor.version@
 processor.filter=maven://org.springframework.cloud.stream.app:filter-processor-rabbit:@filter-processor.version@
 processor.filter.metadata=maven://org.springframework.cloud.stream.app:filter-processor-rabbit:jar:metadata:@filter-processor.version@
-processor.groovy-transform=maven://org.springframework.cloud.stream.app:groovy-transform-processor-rabbit:@groovy-transform-processor.version@
-processor.groovy-transform.metadata=maven://org.springframework.cloud.stream.app:groovy-transform-processor-rabbit:jar:metadata:@groovy-transform-processor.version@
+processor.groovy=maven://org.springframework.cloud.stream.app:groovy-processor-rabbit:@groovy-processor.version@
+processor.groovy.metadata=maven://org.springframework.cloud.stream.app:groovy-processor-rabbit:jar:metadata:@groovy-processor.version@
 processor.header-enricher=maven://org.springframework.cloud.stream.app:header-enricher-processor-rabbit:@header-enricher-processor.version@
 processor.header-enricher.metadata=maven://org.springframework.cloud.stream.app:header-enricher-processor-rabbit:jar:metadata:@header-enricher-processor.version@
+processor.http-request=maven://org.springframework.cloud.stream.app:http-request-processor-rabbit:@http-request-processor.version@
+processor.http-request.metadata=maven://org.springframework.cloud.stream.app:http-request-processor-rabbit:jar:metadata:@http-request-processor.version@
+processor.script=maven://org.springframework.cloud.stream.app:script-processor-rabbit:@script-processor.version@
+processor.script.metadata=maven://org.springframework.cloud.stream.app:script-processor-rabbit:jar:metadata:@script-processor.version@
 processor.splitter=maven://org.springframework.cloud.stream.app:splitter-processor-rabbit:@splitter-processor.version@
 processor.splitter.metadata=maven://org.springframework.cloud.stream.app:splitter-processor-rabbit:jar:metadata:@splitter-processor.version@
 processor.transform=maven://org.springframework.cloud.stream.app:transform-processor-rabbit:@transform-processor.version@
