--- a/applications/stream-applications-build/stream-applications-descriptor/pom.xml
+++ b/applications/stream-applications-build/stream-applications-descriptor/pom.xml
@@ -11,30 +11,6 @@
     <name>stream-applications-descriptor</name>
     <packaging>jar</packaging>
 
-    <properties>
-        <cassandra-sink.version>3.0.0-SNAPSHOT</cassandra-sink.version>
-        <counter-sink.version>3.0.0-SNAPSHOT</counter-sink.version>
-        <file-sink.version>3.0.0-SNAPSHOT</file-sink.version>
-        <ftp-sink.version>3.0.0-SNAPSHOT</ftp-sink.version>
-        <jdbc-sink.version>3.0.0-SNAPSHOT</jdbc-sink.version>
-        <log-sink.version>3.0.0-SNAPSHOT</log-sink.version>
-        <mongodb-sink.version>3.0.0-SNAPSHOT</mongodb-sink.version>
-        <rabbit-sink.version>3.0.0-SNAPSHOT</rabbit-sink.version>
-        <redis-sink.version>3.0.0-SNAPSHOT</redis-sink.version>
-        <sftp-sink.version>3.0.0-SNAPSHOT</sftp-sink.version>
-        <file-source.version>3.0.0-SNAPSHOT</file-source.version>
-        <http-source.version>3.0.0-SNAPSHOT</http-source.version>
-        <jdbc-source.version>3.0.0-SNAPSHOT</jdbc-source.version>
-        <mongodb-source.version>3.0.0-SNAPSHOT</mongodb-source.version>
-        <time-source.version>3.0.0-SNAPSHOT</time-source.version>
-        <bridge-processor.version>3.0.0-SNAPSHOT</bridge-processor.version>
-        <filter-processor.version>3.0.0-SNAPSHOT</filter-processor.version>
-        <header-enricher-processor.version>3.0.0-SNAPSHOT</header-enricher-processor.version>
-        <splitter-processor.version>3.0.0-SNAPSHOT</splitter-processor.version>
-        <transform-processor.version>3.0.0-SNAPSHOT</transform-processor.version>
-        <groovy-transform-processor.version>3.0.0-SNAPSHOT</groovy-transform-processor.version>
-    </properties>
-
     <build>
         <resources>
             <resource>
@@ -66,50 +42,75 @@
                             <source><![CDATA[
         pom.properties['repo-spring-io']=
                 "${jdbc-source.version}".contains('SNAPSHOT') ? 'repo.spring.io/snapshot' :
-                        "${jdbc-source.version}".contains('-') ? 'repo.spring.io/milestone' : 'repo.spring.io/release';
-
-        pom.properties['cassandra-sink-docker.tag']=
-                "${cassandra-sink.version}".contains('SNAPSHOT') ? 'latest' : "${cassandra-sink.version}";
-        pom.properties['counter-sink-docker.tag']=
-                "${counter-sink.version}".contains('SNAPSHOT') ? 'latest' : "${counter-sink.version}";
-        pom.properties['file-sink-docker.tag']=
-                "${file-sink.version}".contains('SNAPSHOT') ? 'latest' : "${file-sink.version}";
-        pom.properties['ftp-sink-docker.tag']=
-                "${ftp-sink.version}".contains('SNAPSHOT') ? 'latest' : "${ftp-sink.version}";
-        pom.properties['jdbc-sink-docker.tag']=
-                "${jdbc-sink.version}".contains('SNAPSHOT') ? 'latest' : "${jdbc-sink.version}";
-        pom.properties['log-sink-docker.tag']=
-                "${log-sink.version}".contains('SNAPSHOT') ? 'latest' : "${log-sink.version}";
-        pom.properties['mongodb-sink-docker.tag']=
-                "${mongodb-sink.version}".contains('SNAPSHOT') ? 'latest' : "${mongodb-sink.version}";
-        pom.properties['rabbit-sink-docker.tag']=
-                "${rabbit-sink.version}".contains('SNAPSHOT') ? 'latest' : "${rabbit-sink.version}";
-        pom.properties['redis-sink-docker.tag']=
-                "${redis-sink.version}".contains('SNAPSHOT') ? 'latest' : "${redis-sink.version}";
-        pom.properties['sftp-sink-docker.tag']=
-                "${sftp-sink.version}".contains('SNAPSHOT') ? 'latest' : "${sftp-sink.version}";
+                        "${jdbc-source.version}".contains('-') ? 'repo.spring.io/milestone' : 'repo.spring.io/release'
         pom.properties['file-source-docker.tag']=
-                "${file-source.version}".contains('SNAPSHOT') ? 'latest' : "${file-source.version}";
+                "${file-source.version}".contains('SNAPSHOT') ? 'latest' : "${file-source.version}"
+        pom.properties['geode-source-docker.tag']=
+                "${geode-source.version}".contains('SNAPSHOT') ? 'latest' : "${geode-source.version}"
         pom.properties['http-source-docker.tag']=
-                "${http-source.version}".contains('SNAPSHOT') ? 'latest' : "${http-source.version}";
+                "${http-source.version}".contains('SNAPSHOT') ? 'latest' : "${http-source.version}"
         pom.properties['jdbc-source-docker.tag']=
-                "${jdbc-source.version}".contains('SNAPSHOT') ? 'latest' : "${jdbc-source.version}";
+                "${jdbc-source.version}".contains('SNAPSHOT') ? 'latest' : "${jdbc-source.version}"
+        pom.properties['load-generator-source-docker.tag']=
+                "${load-generator-source.version}".contains('SNAPSHOT') ? 'latest' : "${load-generator-source.version}"
         pom.properties['mongodb-source-docker.tag']=
-                "${mongodb-source.version}".contains('SNAPSHOT') ? 'latest' : "${mongodb-source.version}";
+                "${mongodb-source.version}".contains('SNAPSHOT') ? 'latest' : "${mongodb-source.version}"
+        pom.properties['mqtt-source-docker.tag']=
+                "${mqtt-source.version}".contains('SNAPSHOT') ? 'latest' : "${mqtt-source.version}"
+        pom.properties['rabbit-source-docker.tag']=
+                "${rabbit-source.version}".contains('SNAPSHOT') ? 'latest' : "${rabbit-source.version}"
+        pom.properties['tcp-source-docker.tag']=
+                "${tcp-source.version}".contains('SNAPSHOT') ? 'latest' : "${tcp-source.version}"
         pom.properties['time-source-docker.tag']=
-                "${time-source.version}".contains('SNAPSHOT') ? 'latest' : "${time-source.version}";
+                "${time-source.version}".contains('SNAPSHOT') ? 'latest' : "${time-source.version}"
+        pom.properties['cassandra-sink-docker.tag']=
+                "${cassandra-sink.version}".contains('SNAPSHOT') ? 'latest' : "${cassandra-sink.version}"
+        pom.properties['counter-sink-docker.tag']=
+                "${counter-sink.version}".contains('SNAPSHOT') ? 'latest' : "${counter-sink.version}"
+        pom.properties['file-sink-docker.tag']=
+                "${file-sink.version}".contains('SNAPSHOT') ? 'latest' : "${file-sink.version}"
+        pom.properties['ftp-sink-docker.tag']=
+                "${ftp-sink.version}".contains('SNAPSHOT') ? 'latest' : "${ftp-sink.version}"
+        pom.properties['geode-sink-docker.tag']=
+                "${geode-sink.version}".contains('SNAPSHOT') ? 'latest' : "${geode-sink.version}"
+        pom.properties['jdbc-sink-docker.tag']=
+                "${jdbc-sink.version}".contains('SNAPSHOT') ? 'latest' : "${jdbc-sink.version}"
+        pom.properties['log-sink-docker.tag']=
+                "${log-sink.version}".contains('SNAPSHOT') ? 'latest' : "${log-sink.version}"
+        pom.properties['mongodb-sink-docker.tag']=
+                "${mongodb-sink.version}".contains('SNAPSHOT') ? 'latest' : "${mongodb-sink.version}"
+        pom.properties['mqtt-sink-docker.tag']=
+                "${mqtt-sink.version}".contains('SNAPSHOT') ? 'latest' : "${mqtt-sink.version}"
+        pom.properties['rabbit-sink-docker.tag']=
+                "${rabbit-sink.version}".contains('SNAPSHOT') ? 'latest' : "${rabbit-sink.version}"
+        pom.properties['redis-sink-docker.tag']=
+                "${redis-sink.version}".contains('SNAPSHOT') ? 'latest' : "${redis-sink.version}"
+        pom.properties['router-sink-docker.tag']=
+                "${router-sink.version}".contains('SNAPSHOT') ? 'latest' : "${router-sink.version}"
+        pom.properties['sftp-sink-docker.tag']=
+                "${sftp-sink.version}".contains('SNAPSHOT') ? 'latest' : "${sftp-sink.version}"
+        pom.properties['tcp-sink-docker.tag']=
+                "${tcp-sink.version}".contains('SNAPSHOT') ? 'latest' : "${tcp-sink.version}"
+        pom.properties['throughput-sink-docker.tag']=
+                "${throughput-sink.version}".contains('SNAPSHOT') ? 'latest' : "${throughput-sink.version}"
         pom.properties['bridge-processor-docker.tag']=
-                "${bridge-processor.version}".contains('SNAPSHOT') ? 'latest' : "${bridge-processor.version}";
+                "${bridge-processor.version}".contains('SNAPSHOT') ? 'latest' : "${bridge-processor.version}"
         pom.properties['filter-processor-docker.tag']=
-                "${filter-processor.version}".contains('SNAPSHOT') ? 'latest' : "${filter-processor.version}";
-        pom.properties['groovy-transform-processor-docker.tag']=
-                "${groovy-transform-processor.version}".contains('SNAPSHOT') ? 'latest' : "${groovy-transform-processor.version}";
+                "${filter-processor.version}".contains('SNAPSHOT') ? 'latest' : "${filter-processor.version}"
+        pom.properties['groovy-processor-docker.tag']=
+                "${groovy-processor.version}".contains('SNAPSHOT') ? 'latest' : "${groovy-processor.version}"
+        pom.properties['groovy-processor-docker.tag']=
+                "${groovy-processor.version}".contains('SNAPSHOT') ? 'latest' : "${groovy-processor.version}"
         pom.properties['header-enricher-processor-docker.tag']=
-                "${header-enricher-processor.version}".contains('SNAPSHOT') ? 'latest' : "${header-enricher-processor.version}";
+                "${header-enricher-processor.version}".contains('SNAPSHOT') ? 'latest' : "${header-enricher-processor.version}"
+        pom.properties['http-request-processor-docker.tag']=
+                "${http-request-processor.version}".contains('SNAPSHOT') ? 'latest' : "${http-request-processor.version}"
+        pom.properties['script-processor-docker.tag']=
+                "${scrirpt-processor.version}".contains('SNAPSHOT') ? 'latest' : "${script-processor.version}"
         pom.properties['splitter-processor-docker.tag']=
-                "${splitter-processor.version}".contains('SNAPSHOT') ? 'latest' : "${splitter-processor.version}";
+                "${splitter-processor.version}".contains('SNAPSHOT') ? 'latest' : "${splitter-processor.version}"
         pom.properties['transform-processor-docker.tag']=
-                "${transform-processor.version}".contains('SNAPSHOT') ? 'latest' : "${transform-processor.version}";
+                "${transform-processor.version}".contains('SNAPSHOT') ? 'latest' : "${transform-processor.version}"
                                 ]]></source>
                         </configuration>
                     </execution>
