--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
@@ -1,21 +1,33 @@
+source.file=docker:springcloudstream/file-source-kafka:@file-source-docker.tag@
+source.geode=docker:springcloudstream/geode-source-kafka:@geode-source-docker.tag@
+source.http=docker:springcloudstream/http-source-kafka:@http-source-docker.tag@
+source.jdbc=docker:springcloudstream/jdbc-source-kafka:@jdbc-source-docker.tag@
+source.load-generator=docker:springcloudstream/load-generator-source-kafka:@load-generator-source-docker.tag@
+source.mongodb=docker:springcloudstream/mongodb-source-kafka:@mongodb-source-docker.tag@
+source.mqtt=docker:springcloudstream/mqtt-source-kafka:@mqtt-source-docker.tag@
+source.rabbit=docker:springcloudstream/rabbit-source-kafka:@rabbit-source-docker.tag@
+source.tcp=docker:springcloudstream/tcp-source-kafka:@tcp-source-docker.tag@
+source.time=docker:springcloudstream/time-source-kafka:@time-source-docker.tag@
 sink.cassandra=docker:springcloudstream/cassandra-sink-kafka:@cassandra-sink-docker.tag@
 sink.counter=docker:springcloudstream/counter-sink-kafka:@counter-sink-docker.tag@
 sink.file=docker:springcloudstream/file-sink-kafka:@file-sink-docker.tag@
 sink.ftp=docker:springcloudstream/ftp-sink-kafka:@ftp-sink-docker.tag@
+sink.geode=docker:springcloudstream/geode-sink-kafka:@geode-sink-docker.tag@
 sink.jdbc=docker:springcloudstream/jdbc-sink-kafka:@jdbc-sink-docker.tag@
 sink.log=docker:springcloudstream/log-sink-kafka:@log-sink-docker.tag@
 sink.mongodb=docker:springcloudstream/mongodb-sink-kafka:@mongodb-sink-docker.tag@
+sink.mqtt=docker:springcloudstream/mqtt-sink-kafka:@mqtt-sink-docker.tag@
 sink.rabbit=docker:springcloudstream/rabbit-sink-kafka:@rabbit-sink-docker.tag@
 sink.redis=docker:springcloudstream/redis-sink-kafka:@redis-sink-docker.tag@
+sink.router=docker:springcloudstream/router-sink-kafka:@router-sink-docker.tag@
 sink.sftp=docker:springcloudstream/sftp-sink-kafka:@sftp-sink-docker.tag@
-source.file=docker:springcloudstream/file-source-kafka:@file-source-docker.tag@
-source.http=docker:springcloudstream/http-source-kafka:@http-source-docker.tag@
-source.jdbc=docker:springcloudstream/jdbc-source-kafka:@jdbc-source-docker.tag@
-source.mongodb=docker:springcloudstream/mongodb-source-kafka:@mongodb-source-docker.tag@
-source.time=docker:springcloudstream/time-source-kafka:@time-source-docker.tag@
+sink.tcp=docker:springcloudstream/tcp-sink-kafka:@tcp-sink-docker.tag@
+sink.throughput=docker:springcloudstream/throughput-sink-kafka:@throughput-sink-docker.tag@
 processor.bridge=docker:springcloudstream/bridge-processor-kafka:@bridge-processor-docker.tag@
 processor.filter=docker:springcloudstream/filter-processor-kafka:@filter-processor-docker.tag@
-processor.groovy-transform=docker:springcloudstream/groovy-transform-processor-kafka:@groovy-transform-processor-docker.tag@
+processor.groovy=docker:springcloudstream/groovy-processor-kafka:@groovy-processor-docker.tag@
 processor.header-enricher=docker:springcloudstream/header-enricher-processor-kafka:@header-enricher-processor-docker.tag@
+processor.http-request=docker:springcloudstream/http-request-processor-kafka:@http-request-processor-docker.tag@
+processor.script=docker:springcloudstream/script-processor-kafka:@script-processor-docker.tag@
 processor.splitter=docker:springcloudstream/splitter-processor-kafka:@splitter-processor-docker.tag@
 processor.transform=docker:springcloudstream/transform-processor-kafka:@transform-processor-docker.tag@
