--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven-repo-url.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven-repo-url.properties
@@ -1,3 +1,23 @@
+source.file=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-source-kafka/@file-source.version@/file-source-kafka-@file-source.version@.jar
+source.file.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-source-kafka/@file-source.version@/file-source-kafka-@file-source.version@-metadata.jar
+source.geode=https://@repo-spring-io@/org/springframework/cloud/stream/app/geode-source-kafka/@geode-source.version@/geode-source-kafka-@geode-source.version@.jar
+source.geode.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/geode-source-kafka/@geode-source.version@/geode-source-kafka-@geode-source.version@-metadata.jar
+source.http=https://@repo-spring-io@/org/springframework/cloud/stream/app/http-source-kafka/@http-source.version@/http-source-kafka-@http-source.version@.jar
+source.http.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/http-source-kafka/@http-source.version@/http-source-kafka-@http-source.version@-metadata.jar
+source.jdbc=https://@repo-spring-io@/org/springframework/cloud/stream/app/jdbc-source-kafka/@jdb-source.version@/jdbc-source-kafka-@jdbc-source.version@.jar
+source.jdbc.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/jdbc-source-kafka/@jdb-source.version@/jdbc-source-kafka-@jdbc-source.version@-metadata.jar
+source.load-generator=https://@repo-spring-io@/org/springframework/cloud/stream/app/load-generator-source-kafka/@load-generator-source.version@/load-generator-source-kafka-@load-generator-source.version@.jar
+source.load-generator.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/load-generator-source-kafka/@load-generator-source.version@/load-generator-source-kafka-@load-generator-source.version@-metadata.jar
+source.mongodb=https://@repo-spring-io@/org/springframework/cloud/stream/app/mongodb-source-kafka/@mongodb-source.version@/mongodb-source-kafka-@mongodb-source.version@.jar
+source.mongodb.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/mongodb-source-kafka/@mongodb-source.version@/mongodb-source-kafka-@mongodb-source.version@-metadata.jar
+source.mqtt=https://@repo-spring-io@/org/springframework/cloud/stream/app/mqtt-source-kafka/@mqtt-source.version@/mqtt-source-kafka-@mqtt-source.version@.jar
+source.mqtt.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/mqtt-source-kafka/@mqtt-source.version@/mqtt-source-kafka-@mqtt-source.version@-metadata.jar
+source.rabbit=https://@repo-spring-io@/org/springframework/cloud/stream/app/rabbit-source-kafka/@rabbit-source.version@/rabbit-source-kafka-@rabbit-source.version@.jar
+source.rabbit.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/rabbit-source-kafka/@rabbit-source.version@/rabbit-source-kafka-@rabbit-source.version@-metadata.jar
+source.tcp=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-source-kafka/@tcp-source.version@/tcp-source-kafka-@tcp-source.version@.jar
+source.tcp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-source-kafka/@tcp-source.version@/tcp-source-kafka-@tcp-source.version@-metadata.jar
+source.time=https://@repo-spring-io@/org/springframework/cloud/stream/app/time-source-kafka/@time-source.version@/time-source-kafka-@time-source.version@.jar
+source.time.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/time-source-kafka/@time-source.version@/time-source-kafka-@time-source.version@-metadata.jar
 sink.cassandra=https://@repo-spring-io@/org/springframework/cloud/stream/app/cassandra-sink-kafka/@cassandra-sink.version@/cassandra-sink-kafka-@cassandra-sink.version@.jar
 sink.cassandra.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/cassandra-sink-kafka/@cassandra-sink.version@/cassandra-sink-kafka-@cassandra-sink.version@-metadata.jar
 sink.counter=https://@repo-spring-io@/org/springframework/cloud/stream/app/counter-sink-kafka/@counter-sink.version@/counter-sink-kafka-@counter-sink.version@.jar
@@ -6,36 +26,40 @@ sink.file=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-sin
 sink.file.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-sink-kafka/@file-sink.version@/file-sink-kafka-@file-sink.version@-metadata.jar
 sink.ftp=https://@repo-spring-io@/org/springframework/cloud/stream/app/ftp-sink-kafka/@ftp-sink.version@/ftp-sink-kafka-@ftp-sink.version@.jar
 sink.ftp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/ftp-sink-kafka/@ftp-sink.version@/ftp-sink-kafka-@ftp-sink.version@-metadata.jar
+sink.geode=https://@repo-spring-io@/org/springframework/cloud/stream/app/geode-sink-kafka/@geode-sink.version@/geode-sink-kafka-@geode-sink.version@.jar
+sink.geode.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/geode-sink-kafka/@geode-sink.version@/geode-sink-kafka-@geode-sink.version@-metadata.jar
 sink.jdbc=https://@repo-spring-io@/org/springframework/cloud/stream/app/jdbc-sink-kafka/@jdbc-sink.version@/jdbc-sink-kafka-@jdbc-sink.version@.jar
 sink.jdbc.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/jdbc-sink-kafka/@jdbc-sink.version@/jdbc-sink-kafka-@jdbc-sink.version@-metadata.jar
 sink.log=https://@repo-spring-io@/org/springframework/cloud/stream/app/log-sink-kafka/@log-sink.version@/log-sink-kafka-@log-sink.version@.jar
 sink.log.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/log-sink-kafka/@log-sink.version@/log-sink-kafka-@log-sink.version@-metadata.jar
 sink.mongodb=https://@repo-spring-io@/org/springframework/cloud/stream/app/mongodb-sink-kafka/@mongodb-sink.version@/mongodb-sink-kafka-@mongodb-sink.version@.jar
 sink.mongodb.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/mongodb-sink-kafka/@mongodb-sink.version@/mongodb-sink-kafka-@mongodb-sink.version@-metadata.jar
+sink.mqtt=https://@repo-spring-io@/org/springframework/cloud/stream/app/mqtt-sink-kafka/@mqtt-sink.version@/mqtt-sink-kafka-@mqtt-sink.version@.jar
+sink.mqtt.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/mqtt-sink-kafka/@mqtt-sink.version@/mqtt-sink-kafka-@mqtt-sink.version@-metadata.jar
 sink.rabbit=https://@repo-spring-io@/org/springframework/cloud/stream/app/rabbit-sink-kafka/@rabbit-sink.version@/rabbit-sink-kafka-@rabbit-sink.version@.jar
 sink.rabbit.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/rabbit-sink-kafka/@rabbit-sink.version@/rabbit-sink-kafka-@rabbit-sink.version@-metadata.jar
 sink.redis=https://@repo-spring-io@/org/springframework/cloud/stream/app/redis-sink-kafka/@redis-sink.version@/redis-sink-kafka-@redis-sink.version@.jar
 sink.redis.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/redis-sink-kafka/@redis-sink.version@/redis-sink-kafka-@redis-sink.version@-metadata.jar
+sink.router=https://@repo-spring-io@/org/springframework/cloud/stream/app/router-sink-kafka/@router-sink.version@/router-sink-kafka-@router-sink.version@.jar
+sink.router.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/router-sink-kafka/@router-sink.version@/router-sink-kafka-@router-sink.version@-metadata.jar
 sink.sftp=https://@repo-spring-io@/org/springframework/cloud/stream/app/sftp-sink-kafka/@sftp-sink.version@/sftp-sink-kafka-@sftp-sink.version@.jar
 sink.sftp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/sftp-sink-kafka/@sftp-sink.version@/sftp-sink-kafka-@sftp-sink.version@-metadata.jar
-source.file=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-source-kafka/@file-source.version@/file-source-kafka-@file-source.version@.jar
-source.file.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-source-kafka/@file-source.version@/file-source-kafka-@file-source.version@-metadata.jar
-source.http=https://@repo-spring-io@/org/springframework/cloud/stream/app/http-source-kafka/@http-source.version@/http-source-kafka-@http-source.version@.jar
-source.http.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/http-source-kafka/@http-source.version@/http-source-kafka-@http-source.version@-metadata.jar
-source.jdbc=https://@repo-spring-io@/org/springframework/cloud/stream/app/jdbc-source-kafka/@jdb-source.version@/jdbc-source-kafka-@jdbc-source.version@.jar
-source.jdbc.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/jdbc-source-kafka/@jdb-source.version@/jdbc-source-kafka-@jdbc-source.version@-metadata.jar
-source.mongodb=https://@repo-spring-io@/org/springframework/cloud/stream/app/mongodb-source-kafka/@mongodb-source.version@/mongodb-source-kafka-@mongodb-source.version@.jar
-source.mongodb.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/mongodb-source-kafka/@mongodb-source.version@/mongodb-source-kafka-@mongodb-source.version@-metadata.jar
-source.time=https://@repo-spring-io@/org/springframework/cloud/stream/app/time-source-kafka/@time-source.version@/time-source-kafka-@time-source.version@.jar
-source.time.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/time-source-kafka/@time-source.version@/time-source-kafka-@time-source.version@-metadata.jar
+sink.tcp=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-sink-kafka/@tcp-sink.version@/tcp-sink-kafka-@sftp-sink.version@.jar
+sink.tcp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-sink-kafka/@tcp-sink.version@/tcp-sink-kafka-@tcp-sink.version@-metadata.jar
+sink.throughput=https://@repo-spring-io@/org/springframework/cloud/stream/app/throughput-sink-kafka/@throughput-sink.version@/throughput-sink-kafka-@throughput-sink.version@.jar
+sink.throughput.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/throughput-sink-kafka/@throughput-sink.version@/throughput-sink-kafka-@throughput-sink.version@-metadata.jar
 processor.bridge=https://@repo-spring-io@/org/springframework/cloud/stream/app/bridge-processor-kafka/@bridge-processor.version@/bridge-processor-kafka-@bridge-processor.version@.jar
 processor.bridge.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/bridge-processor-kafka/@bridge-processor.version@/bridge-processor-kafka-@bridge-processor.version@-metadata.jar
 processor.filter=https://@repo-spring-io@/org/springframework/cloud/stream/app/filter-processor-kafka/@filter-processor.version@/filter-processor-kafka-@filter-processor.version@.jar
 processor.filter.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/filter-processor-kafka/@filter-processor.version@/filter-processor-kafka-@filter-processor.version@-metadata.jar
-processor.groovy-transform=https://@repo-spring-io@/org/springframework/cloud/stream/app/groovy-transform-processor-kafka/@groovy-transform-processor.version@/groovy-transform-processor-kafka-@groovy-transform-processor.version@.jar
-processor.groovy-transform.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/groovy-transform-processor-kafka/@groovy-transform-processor.version@/groovy-transform-processor-kafka-@groovy-transform-processor.version@-metadata.jar
+processor.groovy=https://@repo-spring-io@/org/springframework/cloud/stream/app/groovy-processor-kafka/@groovy-processor.version@/groovy-processor-kafka-@groovy-processor.version@.jar
+processor.groovy.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/groovy-processor-kafka/@groovy-processor.version@/groovy-processor-kafka-@groovy-processor.version@-metadata.jar
 processor.header-enricher=https://@repo-spring-io@/org/springframework/cloud/stream/app/header-enricher-processor-kafka/@header-enricher-processor.version@/header-enricher-processor-kafka-@header-enricher-processor.version@.jar
 processor.header-enricher.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/header-enricher-processor-kafka/@header-enricher-processor.version@/header-enricher-processor-kafka-@header-enricher-processor.version@-metadata.jar
+processor.http-request=https://@repo-spring-io@/org/springframework/cloud/stream/app/http-request-processor-kafka/@http-request-processor.version@/http-request-processor-kafka-@http-request-processor.version@.jar
+processor.http-request.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/http-request-processor-kafka/@http-request-processor.version@/http-request-processor-kafka-@http-request-processor.version@-metadata.jar
+processor.script=https://@repo-spring-io@/org/springframework/cloud/stream/app/script-processor-kafka/@script-processor.version@/script-processor-kafka-@script-processor.version@.jar
+processor.script.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/script-processor-kafka/@script-processor.version@/script-processor-kafka-@script-processor.version@-metadata.jar
 processor.splitter=https://@repo-spring-io@/org/springframework/cloud/stream/app/splitter-processor-kafka/@splitter-processor.version@/splitter-processor-kafka-@splitter-processor.version@.jar
 processor.splitter.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/splitter-processor-kafka/@splitter-processor.version@/splitter-processor-kafka-@splitter-processor.version@-metadata.jar
 processor.transform=https://@repo-spring-io@/org/springframework/cloud/stream/app/transform-processor-kafka/@transform-processor.version@/transform-processor-kafka-@transform-processor.version@.jar
