--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven.properties
@@ -1,3 +1,23 @@
+source.file=maven://org.springframework.cloud.stream.app:file-source-kafka:@file-source.version@
+source.file.metadata=maven://org.springframework.cloud.stream.app:file-source-kafka:jar:metadata:@file-source.version@
+source.geode=maven://org.springframework.cloud.stream.app:geode-source-kafka:@geode-source.version@
+source.geode.metadata=maven://org.springframework.cloud.stream.app:geode-source-kafka:jar:metadata:@geode-source.version@
+source.http=maven://org.springframework.cloud.stream.app:http-source-kafka:@http-source.version@
+source.http.metadata=maven://org.springframework.cloud.stream.app:http-source-kafka:jar:metadata:@http-source.version@
+source.jdbc=maven://org.springframework.cloud.stream.app:jdbc-source-kafka:@jdbc-source.version@
+source.jdbc.metadata=maven://org.springframework.cloud.stream.app:jdbc-source-kafka:jar:metadata:@jdbc-source.version@
+source.load-generator=maven://org.springframework.cloud.stream.app:load-generator-source-kafka:@load-generator-source.version@
+source.load-generator.metadata=maven://org.springframework.cloud.stream.app:load-generator-source-kafka:jar:metadata:@load-generator-source.version@
+source.mongodb=maven://org.springframework.cloud.stream.app:mongodb-source-kafka:@mongodb-source.version@
+source.mongodb.metadata=maven://org.springframework.cloud.stream.app:mongodb-source-kafka:jar:metadata:@mongodb-source.version@
+source.mqtt=maven://org.springframework.cloud.stream.app:mqtt-source-kafka:@mqtt-source.version@
+source.mqtt.metadata=maven://org.springframework.cloud.stream.app:mqtt-source-kafka:jar:metadata:@mqtt-source.version@
+source.rabbit=maven://org.springframework.cloud.stream.app:rabbit-source-kafka:@rabbit-source.version@
+source.rabbit.metadata=maven://org.springframework.cloud.stream.app:rabbit-source-kafka:jar:metadata:@rabbit-source.version@
+source.tcp=maven://org.springframework.cloud.stream.app:tcp-source-kafka:@tcp-source.version@
+source.tcp.metadata=maven://org.springframework.cloud.stream.app:tcp-source-kafka:jar:metadata:@tcp-source.version@
+source.time=maven://org.springframework.cloud.stream.app:time-source-kafka:@time-source.version@
+source.time.metadata=maven://org.springframework.cloud.stream.app:time-source-kafka:jar:metadata:@time-source.version@
 sink.cassandra=maven://org.springframework.cloud.stream.app:cassandra-sink-kafka:@cassandra-sink.version@
 sink.cassandra.metadata=maven://org.springframework.cloud.stream.app:cassandra-sink-kafka:jar:metadata:@cassandra-sink.version@
 sink.counter=maven://org.springframework.cloud.stream.app:counter-sink-kafka:@counter-sink.version@
@@ -6,36 +26,40 @@ sink.file=maven://org.springframework.cloud.stream.app:file-sink-kafka:@file-sin
 sink.file.metadata=maven://org.springframework.cloud.stream.app:file-sink-kafka:jar:metadata:@file-sink.version@
 sink.ftp=maven://org.springframework.cloud.stream.app:ftp-sink-kafka:@ftp-sink.version@
 sink.ftp.metadata=maven://org.springframework.cloud.stream.app:ftp-sink-kafka:jar:metadata:@ftp-sink.version@
+sink.geode=maven://org.springframework.cloud.stream.app:geode-sink-kafka:@geode-sink.version@
+sink.geode.metadata=maven://org.springframework.cloud.stream.app:geode-sink-kafka:jar:metadata:@geode-sink.version@
 sink.jdbc=maven://org.springframework.cloud.stream.app:jdbc-sink-kafka:@jdbc-sink.version@
 sink.jdbc.metadata=maven://org.springframework.cloud.stream.app:jdbc-sink-kafka:jar:metadata:@jdbc-sink.version@
 sink.log=maven://org.springframework.cloud.stream.app:log-sink-kafka:@log-sink.version@
 sink.log.metadata=maven://org.springframework.cloud.stream.app:log-sink-kafka:jar:metadata:@log-sink.version@
 sink.mongodb=maven://org.springframework.cloud.stream.app:mongodb-sink-kafka:@mongodb-sink.version@
 sink.mongodb.metadata=maven://org.springframework.cloud.stream.app:mongodb-sink-kafka:jar:metadata:@mongodb-sink.version@
+sink.mqtt=maven://org.springframework.cloud.stream.app:mqtt-sink-kafka:@mqtt-sink.version@
+sink.mqtt.metadata=maven://org.springframework.cloud.stream.app:mqtt-sink-kafka:jar:metadata:@mqtt-sink.version@
 sink.rabbit=maven://org.springframework.cloud.stream.app:rabbit-sink-kafka:@rabbit-sink.version@
 sink.rabbit.metadata=maven://org.springframework.cloud.stream.app:rabbit-sink-kafka:jar:metadata:@rabbit-sink.version@
 sink.redis=maven://org.springframework.cloud.stream.app:redis-sink-kafka:@redis-sink.version@
 sink.redis.metadata=maven://org.springframework.cloud.stream.app:redis-sink-kafka:jar:metadata:@redis-sink.version@
+sink.router=maven://org.springframework.cloud.stream.app:router-sink-kafka:@router-sink.version@
+sink.router.metadata=maven://org.springframework.cloud.stream.app:router-sink-kafka:jar:metadata:@router-sink.version@
 sink.sftp=maven://org.springframework.cloud.stream.app:sftp-sink-kafka:@sftp-sink.version@
 sink.sftp.metadata=maven://org.springframework.cloud.stream.app:sftp-sink-kafka:jar:metadata:@sftp-sink.version@
-source.file=maven://org.springframework.cloud.stream.app:file-source-kafka:@file-source.version@
-source.file.metadata=maven://org.springframework.cloud.stream.app:file-source-kafka:jar:metadata:@file-source.version@
-source.http=maven://org.springframework.cloud.stream.app:http-source-kafka:@http-source.version@
-source.http.metadata=maven://org.springframework.cloud.stream.app:http-source-kafka:jar:metadata:@http-source.version@
-source.jdbc=maven://org.springframework.cloud.stream.app:jdbc-source-kafka:@jdbc-source.version@
-source.jdbc.metadata=maven://org.springframework.cloud.stream.app:jdbc-source-kafka:jar:metadata:@jdbc-source.version@
-source.mongodb=maven://org.springframework.cloud.stream.app:mongodb-source-kafka:@mongodb-source.version@
-source.mongodb.metadata=maven://org.springframework.cloud.stream.app:mongodb-source-kafka:jar:metadata:@mongodb-source.version@
-source.time=maven://org.springframework.cloud.stream.app:time-source-kafka:@time-source.version@
-source.time.metadata=maven://org.springframework.cloud.stream.app:time-source-kafka:jar:metadata:@time-source.version@
+sink.tcp=maven://org.springframework.cloud.stream.app:tcp-sink-kafka:@tcp-sink.version@
+sink.tcp.metadata=maven://org.springframework.cloud.stream.app:tcp-sink-kafka:jar:metadata:@tcp-sink.version@
+sink.throughput=maven://org.springframework.cloud.stream.app:throughput-sink-kafka:@throughput-sink.version@
+sink.throughput.metadata=maven://org.springframework.cloud.stream.app:throughput-sink-kafka:jar:metadata:@throughput-sink.version@
 processor.bridge=maven://org.springframework.cloud.stream.app:bridge-processor-kafka:@bridge-processor.version@
 processor.bridge.metadata=maven://org.springframework.cloud.stream.app:bridge-processor-kafka:jar:metadata:@bridge-processor.version@
 processor.filter=maven://org.springframework.cloud.stream.app:filter-processor-kafka:@filter-processor.version@
 processor.filter.metadata=maven://org.springframework.cloud.stream.app:filter-processor-kafka:jar:metadata:@filter-processor.version@
-processor.groovy-transform=maven://org.springframework.cloud.stream.app:groovy-transform-processor-kafka:@groovy-transform-processor.version@
-processor.groovy-transform.metadata=maven://org.springframework.cloud.stream.app:groovy-transform-processor-kafka:jar:metadata:@groovy-transform-processor.version@
+processor.groovy=maven://org.springframework.cloud.stream.app:groovy-processor-kafka:@groovy-processor.version@
+processor.groovy.metadata=maven://org.springframework.cloud.stream.app:groovy-processor-kafka:jar:metadata:@groovy-processor.version@
 processor.header-enricher=maven://org.springframework.cloud.stream.app:header-enricher-processor-kafka:@header-enricher-processor.version@
 processor.header-enricher.metadata=maven://org.springframework.cloud.stream.app:header-enricher-processor-kafka:jar:metadata:@header-enricher-processor.version@
+processor.http-request=maven://org.springframework.cloud.stream.app:http-request-processor-kafka:@http-request-processor.version@
+processor.http-request.metadata=maven://org.springframework.cloud.stream.app:http-request-processor-kafka:jar:metadata:@http-request-processor.version@
+processor.script=maven://org.springframework.cloud.stream.app:script-processor-kafka:@script-processor.version@
+processor.script.metadata=maven://org.springframework.cloud.stream.app:script-processor-kafka:jar:metadata:@script-processor.version@
 processor.splitter=maven://org.springframework.cloud.stream.app:splitter-processor-kafka:@splitter-processor.version@
 processor.splitter.metadata=maven://org.springframework.cloud.stream.app:splitter-processor-kafka:jar:metadata:@splitter-processor.version@
 processor.transform=maven://org.springframework.cloud.stream.app:transform-processor-kafka:@transform-processor.version@
