--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven-repo-url.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven-repo-url.properties
@@ -1,3 +1,23 @@
+source.file=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-source-rabbit/@file-source.version@/file-source-rabbit-@file-source.version@.jar
+source.file.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-source-rabbit/@file-source.version@/file-source-rabbit-@file-source.version@-metadata.jar
+source.geode=https://@repo-spring-io@/org/springframework/cloud/stream/app/geode-source-rabbit/@geode-source.version@/geode-source-rabbit-@geode-source.version@.jar
+source.geode.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/geode-source-rabbit/@geode-source.version@/geode-source-rabbit-@geode-source.version@-metadata.jar
+source.http=https://@repo-spring-io@/org/springframework/cloud/stream/app/http-source-rabbit/@http-source.version@/http-source-rabbit-@http-source.version@.jar
+source.http.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/http-source-rabbit/@http-source.version@/http-source-rabbit-@http-source.version@-metadata.jar
+source.jdbc=https://@repo-spring-io@/org/springframework/cloud/stream/app/jdbc-source-rabbit/@jdb-source.version@/jdbc-source-rabbit-@jdbc-source.version@.jar
+source.jdbc.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/jdbc-source-rabbit/@jdb-source.version@/jdbc-source-rabbit-@jdbc-source.version@-metadata.jar
+source.load-generator=https://@repo-spring-io@/org/springframework/cloud/stream/app/load-generator-source-rabbit/@load-generator-source.version@/load-generator-source-rabbit-@load-generator-source.version@.jar
+source.load-generator.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/load-generator-source-rabbit/@load-generator-source.version@/load-generator-source-rabbit-@load-generator-source.version@-metadata.jar
+source.mongodb=https://@repo-spring-io@/org/springframework/cloud/stream/app/mongodb-source-rabbit/@mongodb-source.version@/mongodb-source-rabbit-@mongodb-source.version@.jar
+source.mongodb.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/mongodb-source-rabbit/@mongodb-source.version@/mongodb-source-rabbit-@mongodb-source.version@-metadata.jar
+source.mqtt=https://@repo-spring-io@/org/springframework/cloud/stream/app/mqtt-source-rabbit/@mqtt-source.version@/mqtt-source-rabbit-@mqtt-source.version@.jar
+source.mqtt.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/mqtt-source-rabbit/@mqtt-source.version@/mqtt-source-rabbit-@mqtt-source.version@-metadata.jar
+source.rabbit=https://@repo-spring-io@/org/springframework/cloud/stream/app/rabbit-source-rabbit/@rabbit-source.version@/rabbit-source-rabbit-@rabbit-source.version@.jar
+source.rabbit.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/rabbit-source-rabbit/@rabbit-source.version@/rabbit-source-rabbit-@rabbit-source.version@-metadata.jar
+source.tcp=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-source-rabbit/@tcp-source.version@/tcp-source-rabbit-@tcp-source.version@.jar
+source.tcp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-source-rabbit/@tcp-source.version@/tcp-source-rabbit-@tcp-source.version@-metadata.jar
+source.time=https://@repo-spring-io@/org/springframework/cloud/stream/app/time-source-rabbit/@time-source.version@/time-source-rabbit-@time-source.version@.jar
+source.time.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/time-source-rabbit/@time-source.version@/time-source-rabbit-@time-source.version@-metadata.jar
 sink.cassandra=https://@repo-spring-io@/org/springframework/cloud/stream/app/cassandra-sink-rabbit/@cassandra-sink.version@/cassandra-sink-rabbit-@cassandra-sink.version@.jar
 sink.cassandra.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/cassandra-sink-rabbit/@cassandra-sink.version@/cassandra-sink-rabbit-@cassandra-sink.version@-metadata.jar
 sink.counter=https://@repo-spring-io@/org/springframework/cloud/stream/app/counter-sink-rabbit/@counter-sink.version@/counter-sink-rabbit-@counter-sink.version@.jar
@@ -6,36 +26,40 @@ sink.file=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-sin
 sink.file.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-sink-rabbit/@file-sink.version@/file-sink-rabbit-@file-sink.version@-metadata.jar
 sink.ftp=https://@repo-spring-io@/org/springframework/cloud/stream/app/ftp-sink-rabbit/@ftp-sink.version@/ftp-sink-rabbit-@ftp-sink.version@.jar
 sink.ftp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/ftp-sink-rabbit/@ftp-sink.version@/ftp-sink-rabbit-@ftp-sink.version@-metadata.jar
+sink.geode=https://@repo-spring-io@/org/springframework/cloud/stream/app/geode-sink-rabbit/@geode-sink.version@/geode-sink-rabbit-@geode-sink.version@.jar
+sink.geode.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/geode-sink-rabbit/@geode-sink.version@/geode-sink-rabbit-@geode-sink.version@-metadata.jar
 sink.jdbc=https://@repo-spring-io@/org/springframework/cloud/stream/app/jdbc-sink-rabbit/@jdbc-sink.version@/jdbc-sink-rabbit-@jdbc-sink.version@.jar
 sink.jdbc.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/jdbc-sink-rabbit/@jdbc-sink.version@/jdbc-sink-rabbit-@jdbc-sink.version@-metadata.jar
 sink.log=https://@repo-spring-io@/org/springframework/cloud/stream/app/log-sink-rabbit/@log-sink.version@/log-sink-rabbit-@log-sink.version@.jar
 sink.log.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/log-sink-rabbit/@log-sink.version@/log-sink-rabbit-@log-sink.version@-metadata.jar
 sink.mongodb=https://@repo-spring-io@/org/springframework/cloud/stream/app/mongodb-sink-rabbit/@mongodb-sink.version@/mongodb-sink-rabbit-@mongodb-sink.version@.jar
 sink.mongodb.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/mongodb-sink-rabbit/@mongodb-sink.version@/mongodb-sink-rabbit-@mongodb-sink.version@-metadata.jar
+sink.mqtt=https://@repo-spring-io@/org/springframework/cloud/stream/app/mqtt-sink-rabbit/@mqtt-sink.version@/mqtt-sink-rabbit-@mqtt-sink.version@.jar
+sink.mqtt.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/mqtt-sink-rabbit/@mqtt-sink.version@/mqtt-sink-rabbit-@mqtt-sink.version@-metadata.jar
 sink.rabbit=https://@repo-spring-io@/org/springframework/cloud/stream/app/rabbit-sink-rabbit/@rabbit-sink.version@/rabbit-sink-rabbit-@rabbit-sink.version@.jar
 sink.rabbit.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/rabbit-sink-rabbit/@rabbit-sink.version@/rabbit-sink-rabbit-@rabbit-sink.version@-metadata.jar
 sink.redis=https://@repo-spring-io@/org/springframework/cloud/stream/app/redis-sink-rabbit/@redis-sink.version@/redis-sink-rabbit-@redis-sink.version@.jar
 sink.redis.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/redis-sink-rabbit/@redis-sink.version@/redis-sink-rabbit-@redis-sink.version@-metadata.jar
+sink.router=https://@repo-spring-io@/org/springframework/cloud/stream/app/router-sink-rabbit/@router-sink.version@/router-sink-rabbit-@router-sink.version@.jar
+sink.router.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/router-sink-rabbit/@router-sink.version@/router-sink-rabbit-@router-sink.version@-metadata.jar
 sink.sftp=https://@repo-spring-io@/org/springframework/cloud/stream/app/sftp-sink-rabbit/@sftp-sink.version@/sftp-sink-rabbit-@sftp-sink.version@.jar
 sink.sftp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/sftp-sink-rabbit/@sftp-sink.version@/sftp-sink-rabbit-@sftp-sink.version@-metadata.jar
-source.file=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-source-rabbit/@file-source.version@/file-source-rabbit-@file-source.version@.jar
-source.file.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/file-source-rabbit/@file-source.version@/file-source-rabbit-@file-source.version@-metadata.jar
-source.http=https://@repo-spring-io@/org/springframework/cloud/stream/app/http-source-rabbit/@http-source.version@/http-source-rabbit-@http-source.version@.jar
-source.http.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/http-source-rabbit/@http-source.version@/http-source-rabbit-@http-source.version@-metadata.jar
-source.jdbc=https://@repo-spring-io@/org/springframework/cloud/stream/app/jdbc-source-rabbit/@jdb-source.version@/jdbc-source-rabbit-@jdbc-source.version@.jar
-source.jdbc.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/jdbc-source-rabbit/@jdb-source.version@/jdbc-source-rabbit-@jdbc-source.version@-metadata.jar
-source.mongodb=https://@repo-spring-io@/org/springframework/cloud/stream/app/mongodb-source-rabbit/@mongodb-source.version@/mongodb-source-rabbit-@mongodb-source.version@.jar
-source.mongodb.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/mongodb-source-rabbit/@mongodb-source.version@/mongodb-source-rabbit-@mongodb-source.version@-metadata.jar
-source.time=https://@repo-spring-io@/org/springframework/cloud/stream/app/time-source-rabbit/@time-source.version@/time-source-rabbit-@time-source.version@.jar
-source.time.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/time-source-rabbit/@time-source.version@/time-source-rabbit-@time-source.version@-metadata.jar
+sink.tcp=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-sink-rabbit/@tcp-sink.version@/tcp-sink-rabbit-@sftp-sink.version@.jar
+sink.tcp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-sink-rabbit/@tcp-sink.version@/tcp-sink-rabbit-@tcp-sink.version@-metadata.jar
+sink.throughput=https://@repo-spring-io@/org/springframework/cloud/stream/app/throughput-sink-rabbit/@throughput-sink.version@/throughput-sink-rabbit-@throughput-sink.version@.jar
+sink.throughput.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/throughput-sink-rabbit/@throughput-sink.version@/throughput-sink-rabbit-@throughput-sink.version@-metadata.jar
 processor.bridge=https://@repo-spring-io@/org/springframework/cloud/stream/app/bridge-processor-rabbit/@bridge-processor.version@/bridge-processor-rabbit-@bridge-processor.version@.jar
 processor.bridge.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/bridge-processor-rabbit/@bridge-processor.version@/bridge-processor-rabbit-@bridge-processor.version@-metadata.jar
 processor.filter=https://@repo-spring-io@/org/springframework/cloud/stream/app/filter-processor-rabbit/@filter-processor.version@/filter-processor-rabbit-@filter-processor.version@.jar
 processor.filter.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/filter-processor-rabbit/@filter-processor.version@/filter-processor-rabbit-@filter-processor.version@-metadata.jar
-processor.groovy-transform=https://@repo-spring-io@/org/springframework/cloud/stream/app/groovy-transform-processor-rabbit/@groovy-transform-processor.version@/groovy-transform-processor-rabbit-@groovy-transform-processor.version@.jar
-processor.groovy-transform.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/groovy-transform-processor-rabbit/@groovy-transform-processor.version@/groovy-transform-processor-rabbit-@groovy-transform-processor.version@-metadata.jar
+processor.groovy=https://@repo-spring-io@/org/springframework/cloud/stream/app/groovy-processor-rabbit/@groovy-processor.version@/groovy-processor-rabbit-@groovy-processor.version@.jar
+processor.groovy.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/groovy-processor-rabbit/@groovy-processor.version@/groovy-processor-rabbit-@groovy-processor.version@-metadata.jar
 processor.header-enricher=https://@repo-spring-io@/org/springframework/cloud/stream/app/header-enricher-processor-rabbit/@header-enricher-processor.version@/header-enricher-processor-rabbit-@header-enricher-processor.version@.jar
 processor.header-enricher.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/header-enricher-processor-rabbit/@header-enricher-processor.version@/header-enricher-processor-rabbit-@header-enricher-processor.version@-metadata.jar
+processor.http-request=https://@repo-spring-io@/org/springframework/cloud/stream/app/http-request-processor-rabbit/@http-request-processor.version@/http-request-processor-rabbit-@http-request-processor.version@.jar
+processor.http-request.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/http-request-processor-rabbit/@http-request-processor.version@/http-request-processor-rabbit-@http-request-processor.version@-metadata.jar
+processor.script=https://@repo-spring-io@/org/springframework/cloud/stream/app/script-processor-rabbit/@script-processor.version@/script-processor-rabbit-@script-processor.version@.jar
+processor.script.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/script-processor-rabbit/@script-processor.version@/script-processor-rabbit-@script-processor.version@-metadata.jar
 processor.splitter=https://@repo-spring-io@/org/springframework/cloud/stream/app/splitter-processor-rabbit/@splitter-processor.version@/splitter-processor-rabbit-@splitter-processor.version@.jar
 processor.splitter.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/splitter-processor-rabbit/@splitter-processor.version@/splitter-processor-rabbit-@splitter-processor.version@-metadata.jar
 processor.transform=https://@repo-spring-io@/org/springframework/cloud/stream/app/transform-processor-rabbit/@transform-processor.version@/transform-processor-rabbit-@transform-processor.version@.jar
