Add Wavefront Consumer and Wavefront Sink
 - Supports direct and proxy access.
 - Uses SpEL expressions to compute output metrics value and tags from the input message.
 - Add tests.

--- a/applications/sink/pom.xml
+++ b/applications/sink/pom.xml
@@ -30,5 +30,6 @@
         <module>websocket-sink</module>
         <module>twitter-update-sink</module>
         <module>twitter-message-sink</module>
+        <module>wavefront-sink</module>
     </modules>
 </project>
