--- a/applications/source/pom.xml
+++ b/applications/source/pom.xml
@@ -20,5 +20,6 @@
         <module>mongodb-source</module>
         <module>tcp-source</module>
         <module>rabbit-source</module>
+        <module>websocket-source</module>
     </modules>
 </project>
