--- a/functions/common/function-test-support/pom.xml
+++ b/functions/common/function-test-support/pom.xml
@@ -57,6 +57,10 @@
             <artifactId>spring-data-geode</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-websocket</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
