--- a/functions/pom.xml
+++ b/functions/pom.xml
@@ -62,6 +62,7 @@
 		<module>consumer/redis-consumer</module>
 		<module>consumer/sftp-consumer</module>
 		<module>consumer/tcp-consumer</module>
+		<module>consumer/websocket-consumer</module>
 
 		<module>function/filter-function</module>
 		<module>function/header-enricher-function</module>
@@ -79,6 +80,7 @@
 		<module>supplier/tcp-supplier</module>
 		<module>supplier/time-supplier</module>
 		<module>supplier/rabbit-supplier</module>
+		<module>supplier/websocket-supplier</module>
 
 		<module>spring-functions-parent</module>
 	</modules>
