FTP supplier/source

--- a/applications/sink/ftp-sink/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
+++ b/applications/sink/ftp-sink/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
@@ -1,1 +1,2 @@
-configuration-properties.classes=org.springframework.cloud.fn.consumer.ftp.FtpConsumerProperties
+configuration-properties.classes=org.springframework.cloud.fn.consumer.ftp.FtpConsumerProperties, \
+  org.springframework.cloud.fn.common.ftp.FtpSessionFactoryProperties
