--- a/functions/supplier/ftp-supplier/pom.xml
+++ b/functions/supplier/ftp-supplier/pom.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>file-supplier</artifactId>
+    <artifactId>ftp-supplier</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>file-supplier</name>
-    <description>file supplier</description>
+    <name>ftp-supplier</name>
+    <description>ftp supplier</description>
 
     <parent>
         <groupId>org.springframework.cloud.fn</groupId>
@@ -16,7 +16,7 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.integration</groupId>
-            <artifactId>spring-integration-file</artifactId>
+            <artifactId>spring-integration-ftp</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -25,6 +25,16 @@
         <dependency>
             <groupId>org.springframework.cloud.fn</groupId>
             <artifactId>file-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud.fn</groupId>
+            <artifactId>ftp-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud.fn</groupId>
+            <artifactId>metadata-store-common</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -50,6 +60,11 @@
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud.fn</groupId>
+            <artifactId>function-test-support</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
