FTP supplier/source
AWS S3 apps migration

s3-supplier/s3-source
s3-consumer/s3-sink

Fix merge conflicts

Addressing PR review comments

Rebasing

Add ConditionalOnMissingClass to Spel converter config

Test cleanup

* Fix `AwsS3SourceTests` to properly mock before starting endpoint

--- a/applications/sink/pom.xml
+++ b/applications/sink/pom.xml
@@ -24,6 +24,7 @@
         <module>router-sink</module>
         <module>sftp-sink</module>
         <module>tasklauncher-sink</module>
+        <module>s3-sink</module>
         <module>tcp-sink</module>
         <module>throughput-sink</module>
         <module>websocket-sink</module>
