Tensorflow functions and applications
 * initial step
 * Tensorflow models functional model redesign

      -- Based on https://tzolov.github.io/mind-model-services
      -- Resolves #5

 * Add object detection processor README
 * Add image recognition processor README
 * Initial Tensorflow commonn README
 * Initial Tensorflow commonn README
 * Tensorflow common diagram
 * Tensorflow docs code
 * Tensorflow docs code snippets improve
 * Tensorflow docs code snippets improve
 * Tensorflow docs code snippets improve
 * Tensorflow docs code snippets improve
 * Add semantic segmentation function. add object detecteion function readme
 * oo images
 * Furether oo readme improvments
 * Final obj detection readme fixes
 * Add image recognition readme
 * Add image recognition readme 2
 * Semantic segmentation readme
 * Segmentation readme
 * Semantic segmentation readme 3
 * Fix image recognition and object detcion app starter dependecies

 * Add metadata for Tensorflow apps

--- a/applications/stream-applications-build/stream-applications-descriptor/pom.xml
+++ b/applications/stream-applications-build/stream-applications-descriptor/pom.xml
@@ -127,6 +127,10 @@
                 "${header-enricher-processor.version}".contains('SNAPSHOT') ? 'latest' : "${header-enricher-processor.version}"
         pom.properties['http-request-processor-docker.tag']=
                 "${http-request-processor.version}".contains('SNAPSHOT') ? 'latest' : "${http-request-processor.version}"
+        pom.properties['image-recognition-processor-docker.tag']=
+                "${image-recognition-processor.version}".contains('SNAPSHOT') ? 'latest' : "${image-recognition-processor.version}"
+        pom.properties['object-detection-processor-docker.tag']=
+                "${object-detection-processor.version}".contains('SNAPSHOT') ? 'latest' : "${object-detection-processor.version}"
         pom.properties['script-processor-docker.tag']=
                 "${script-processor.version}".contains('SNAPSHOT') ? 'latest' : "${script-processor.version}"
         pom.properties['splitter-processor-docker.tag']=
