--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
@@ -82,6 +82,8 @@ processor.header-enricher=maven://org.springframework.cloud.stream.app:header-en
 processor.header-enricher.metadata=maven://org.springframework.cloud.stream.app:header-enricher-processor-rabbit:jar:metadata:@header-enricher-processor.version@
 processor.http-request=maven://org.springframework.cloud.stream.app:http-request-processor-rabbit:@http-request-processor.version@
 processor.http-request.metadata=maven://org.springframework.cloud.stream.app:http-request-processor-rabbit:jar:metadata:@http-request-processor.version@
+processor.object-detection=maven://org.springframework.cloud.stream.app:object-detection-processor-rabbit:@object-detection-processor.version@
+processor.object-detection.metadata=maven://org.springframework.cloud.stream.app:object-detection-processor-rabbit:jar:metadata:@object-detection-processor.version@
 processor.script=maven://org.springframework.cloud.stream.app:script-processor-rabbit:@script-processor.version@
 processor.script.metadata=maven://org.springframework.cloud.stream.app:script-processor-rabbit:jar:metadata:@script-processor.version@
 processor.splitter=maven://org.springframework.cloud.stream.app:splitter-processor-rabbit:@splitter-processor.version@
