--- a/applications/processor/pom.xml
+++ b/applications/processor/pom.xml
@@ -19,6 +19,8 @@
         <module>transform-processor</module>
         <module>script-processor</module>
         <module>twitter-trend-processor</module>
+        <module>image-recognition-processor</module>
+        <module>object-detection-processor</module>
     </modules>
 
 </project>
