--- a/applications/stream-applications-build/pom.xml
+++ b/applications/stream-applications-build/pom.xml
@@ -61,6 +61,8 @@
         <groovy-processor.version>3.0.0-SNAPSHOT</groovy-processor.version>
         <header-enricher-processor.version>3.0.0-SNAPSHOT</header-enricher-processor.version>
         <http-request-processor.version>3.0.0-SNAPSHOT</http-request-processor.version>
+        <image-recognition-processor.version>3.0.0-SNAPSHOT</image-recognition-processor.version>
+        <object-detection-processor.version>3.0.0-SNAPSHOT</object-detection-processor.version>
         <script-processor.version>3.0.0-SNAPSHOT</script-processor.version>
         <splitter-processor.version>3.0.0-SNAPSHOT</splitter-processor.version>
         <transform-processor.version>3.0.0-SNAPSHOT</transform-processor.version>
