--- a/applications/source/file-source/pom.xml
+++ b/applications/source/file-source/pom.xml
@@ -26,6 +26,12 @@
             <artifactId>file-supplier</artifactId>
             <version>${java-functions.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud.stream.app</groupId>
+            <artifactId>stream-applications-composite-function-support</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -49,6 +55,11 @@
                             <groupId>org.springframework.cloud.fn</groupId>
                             <artifactId>file-supplier</artifactId>
                             <version>${java-functions.version}</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>org.springframework.cloud.stream.app</groupId>
+                            <artifactId>stream-applications-composite-function-support</artifactId>
+                            <version>${project.version}</version>
                         </dependency>
                     </dependencies>
                 </configuration>
