--- a/applications/source/tcp-source/pom.xml
+++ b/applications/source/tcp-source/pom.xml
@@ -50,6 +50,11 @@
                             <artifactId>tcp-supplier</artifactId>
                             <version>${java-functions.version}</version>
                         </dependency>
+                        <dependency>
+                            <groupId>org.springframework.cloud.stream.app</groupId>
+                            <artifactId>stream-applications-composite-function-support</artifactId>
+                            <version>${project.version}</version>
+                        </dependency>
                     </dependencies>
                 </configuration>
             </plugin>
