Add composite function support for the sources

--- a/applications/stream-applications-core/pom.xml
+++ b/applications/stream-applications-core/pom.xml
@@ -57,6 +57,7 @@
         <module>common/stream-applications-postprocessor-common</module>
         <module>common/stream-applications-micrometer-common</module>
         <module>common/stream-applications-security-common</module>
+        <module>common/stream-applications-composite-function-support</module>
     </modules>
 
     <dependencyManagement>
