Tensorflow models functional model redesign
  Based on https://tzolov.github.io/mind-model-services

  Resolves #5

--- a/applications/processor/pom.xml
+++ b/applications/processor/pom.xml
@@ -19,6 +19,8 @@
         <module>transform-processor</module>
         <module>script-processor</module>
         <module>twitter-trend-processor</module>
+        <module>image-recognition-processor</module>
+        <module>object-dectection-processor</module>
     </modules>
 
 </project>
