--- a/functions/pom.xml
+++ b/functions/pom.xml
@@ -77,6 +77,7 @@
 		<module>supplier/geode-supplier</module>
 		<module>supplier/http-supplier</module>
 		<module>supplier/jdbc-supplier</module>
+		<module>supplier/jms-supplier</module>
 		<module>supplier/mongodb-supplier</module>
 		<module>supplier/mqtt-supplier</module>
 		<module>supplier/tcp-supplier</module>
